# coronos

./: Makefile.in  README  TODO  config.h  config.h.in  config.status  configure  configure.ac  coronos.in  coronos.in_test  coronos.in_test_parker  coronos.in_test_recon  crs-archive.s  cts.pbs  cts_anim.s  cts_batch  cts_idl.s  ffts_idl.s  govcrs.s  init_coronos.s  ra_evsz_batch  ra_evsz_idl.s  revert.s  rmct2.00.tmp-bak  tomo.pbs
autom4te.cache/: output.0  output.1  output.2  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
cts/a/eps/: a_contour_slc-4_stp-000-ff-spec.eps  a_contour_slc-4_stp-001-ff-spec.eps
cts/p/eps/: p_contour_slc-4_stp-000-ff-spec.eps  p_contour_slc-4_stp-001-ff-spec.eps
idl/cts/: scan_parameters.pro
idl/cts/old/: calc_r.pro  construct_jcontour.pro  cts_batch  cts_idl.s  max_q.pro  min_q.pro  show_contour.pro  single_slice_contour_time_series.pro
idl/evsz/: calcGofx.pro  calc_extE.pro  calc_lpm.pro  run_ave_evsz.pro  scan_parameters.pro
idl/ff_cc/: cc_batch  cross_check.pro  fetch_layer.pro  max_diff.pro  rmct2.00.tmp-bak
idl/ff_contour_ts/: construct_contour.pro  cts.pro  fetch_slices.pro  set_jcontour_levels.pro
idl/ff_time_series/: ff_time_series.pro  open_energy_data_file.pro  scan_parameters.pro
idl/ff_tomo/: fetch_slices.pro  set_levels_by_slice.pro  single_time_contour_tomography_series.pro
idl/pro/cts/: construct_eps_outfile_name.pro  cts.pro  plot_surface.pro  set_contour_levels.pro
idl/pro/evsz/: calc_extE.pro  fetch_datafile.pro  fetch_layer.pro  open_evsz_data_file.pro
idl/pro/ff_cc/: rmct2.00.tmp-bak  scan_parameters.pro
idl/pro/ff_time_series/: ff_time_series.pro  open_energy_data_file.pro  scan_parameters.pro
idl/pro/glb_ext/: glb_ext.pro
idl/pro/spec/: open_spec_data_file.pro  spec.pro
idl/spec/: run_ave_spec.pro
idl/volstruct/: scan_parameters.pro
src/: .cls_fft.cpp.swp  .cls_lcsolve.hpp.swp  Makefile  Makefile.am  Makefile.in  cls_canvas.cpp  cls_canvas.hpp  cls_canvas_cuda_ext.hpp  cls_fft.cpp  cls_fft.hpp  cls_fft_cuda_ext.cu  cls_fft_cuda_ext.hpp  cls_lcsolve.cpp  cls_lcsolve.hpp  cls_lcsolve_cuda_ext.hpp  cls_parameter.cpp  cls_parameter.hpp  cls_parameter_map.cpp  cls_parameter_map.hpp  cls_redhallmhd.cpp  cls_redhallmhd.hpp  cls_redhallmhd_cuda_ext.hpp  cls_run_instance.cpp  cls_run_instance.hpp  cls_run_instance_cuda_ext.hpp  cls_stack.cpp  cls_stack.hpp  cls_stack_cuda_ext.hpp  coronos.cpp  nsp_constants.hpp
src/.deps/: coronos-cls_canvas.Po  coronos-cls_parameter.Po  coronos-cls_parameter_map.Po  coronos-cls_run_instance.Po  coronos-cls_stack.Po  coronos-coronos.Po
